--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
-    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorPrimary">#455A64</color>
+    <color name="colorPrimaryDark">#1C313A</color>
     <color name="colorAccent">#FBC02D</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
