--- a/app/src/main/res/layout/fragment_detection.xml
+++ b/app/src/main/res/layout/fragment_detection.xml
@@ -272,7 +272,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/texture_view"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="gone" />
 
             <androidx.constraintlayout.widget.Group
