--- a/app/src/main/res/layout/fragment_setup.xml
+++ b/app/src/main/res/layout/fragment_setup.xml
@@ -31,9 +31,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/card_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/margin_medium"
+            android:transitionName="@string/transition_name_card_container"
             app:cardBackgroundColor="#71FFFFFF"
             app:cardCornerRadius="8dp"
             app:layout_constraintBottom_toTopOf="@id/btn_proceed"
