--- a/app/src/main/res/layout/fragment_mode_chooser.xml
+++ b/app/src/main/res/layout/fragment_mode_chooser.xml
@@ -18,13 +18,14 @@
 
         <ImageView
             android:id="@+id/img_logo"
-            android:layout_width="92dp"
-            android:layout_height="92dp"
+            android:layout_width="162dp"
+            android:layout_height="162dp"
             android:layout_marginBottom="@dimen/margin_half"
             android:src="@drawable/ic_launcher_foreground"
-            app:layout_constraintBottom_toTopOf="@id/txt_logo"
+            android:transitionName="@string/transition_name_logo_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txt_logo"
             tools:ignore="ContentDescription" />
 
         <TextView
@@ -41,7 +42,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintVertical_bias="0.2" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_options"
