--- a/app/src/main/res/layout/fragment_setup.xml
+++ b/app/src/main/res/layout/fragment_setup.xml
@@ -16,19 +16,34 @@
         android:layout_height="match_parent"
         android:background="@drawable/traffic">
 
+        <ImageView
+            android:id="@+id/img_logo"
+            android:layout_width="62dp"
+            android:layout_height="62dp"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginBottom="@dimen/margin_half"
+            android:src="@drawable/ic_launcher_foreground"
+            android:transitionName="@string/transition_name_logo_image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
         <TextView
             android:id="@+id/txt_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_medium"
             android:fontFamily="@font/comfortaa"
             android:text="@string/app_name"
             android:textColor="@color/white"
-            android:textSize="36sp"
+            android:textSize="32sp"
             android:transitionName="@string/transition_name_logo"
+            app:layout_constraintBottom_toBottomOf="@id/img_logo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintStart_toEndOf="@id/img_logo"
+            app:layout_constraintTop_toTopOf="@id/img_logo" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_container"
